update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -5,6 +5,9 @@ contributor:
     agent_name: Benoit, Paul
     gutenberg_agent_id: '54993'
     url: http://www.gutenberg.org/2009/agents/54993
+covers:
+- cover_type: archival
+  image_path: 68879-h/images/cover.jpg
 creator:
   author:
     agent_name: Balzac, Honoré de
@@ -21,6 +24,8 @@ creator:
     - http://fr.Wikipedia.org/wiki/Honoré_de_Balzac
     - http://en.wikipedia.org/wiki/Honoré_de_Balzac
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68879#La-firmao-de-la-kato-kiu-pilkludas
 gutenberg_issued: '2022-08-31'
 identifiers:
   gutenberg: '68879'
